--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -3,11 +3,19 @@
 one:
   title: MyString
   desc: MyText
-  image_url: MyString
+  image_url: /images/mystring.jpg
   price: 9.99
 
 two:
   title: MyString
   desc: MyText
-  image_url: MyString
+  image_url: /images/mystring.jpg
   price: 9.99
+ruby:
+  title: Programming Ruby 1.9
+  desc:
+    Ruby is the fastest growing and most exciting dynamic
+    language out there. if you need to get working programs
+    delivered fast. you should add Ruby to your toolbox.
+  price: 49.50
+  image_url: ruby.pbg
